[gd_scene load_steps=5 format=2]

[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/gimmicks-scripts/boost-side-only-script.gd" type="Script" id=1]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/boost-side-only/booster-side-only.png" type="Texture" id=2]
[ext_resource path="res://game-assets/audio/sfx/boost-side-sfx.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 65, 48 )

[node name="BoostSideOnly" type="Area2D"]
monitorable = false
script = ExtResource( 1 )
speed = 960.0

[node name="Booster-side-only" type="Sprite" parent="."]
position = Vector2( -32, -48 )
z_index = 2
texture = ExtResource( 2 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -33, 0 )
shape = SubResource( 1 )

[node name="PlayerControllers" type="Node" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_BoostSideOnly_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_BoostSideOnly_body_exited"]
